--- a/public/css/body.css
+++ b/public/css/body.css
@@ -71,7 +71,7 @@
     transform: translate(-50%, -50%);
 }
 #dialogueBox{
-    position: relative;
+    position: absolute;
      z-index: 99;
      padding: 1%;
      left: 20%;
